<resources>
    <string name="app_name">Gibuta Dieta</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_content_menus">Gibuta Dieta</string>
    <string name="legumes">Vegetables</string>
    <string name="carboidratos">carbohydrates</string>
    <string name="agua">Water</string>
    <string name="textview2" translatable="false">TextView</string>
    <string name="textview3" translatable="false">TextView</string>
    <string name="textview4" translatable="false">TextView</string>
    <string name="textview5" translatable="false">TextView</string>
    <string name="gibuta_dieta" translatable="false">Gibuta Dieta</string>
    <string name="star" translatable="false">Star</string>
    <string name="start" translatable="false">start</string>
    <string name="Gibuta" translatable="false">GIBUTA DIETA</string>
    <string name="adicionar" translatable="false">Adicionar</string>
    <string name="comida" translatable="false">Comida</string>
    <string name="quantidade" translatable="false">Quantidade</string>
    <string name="tipoAlimento" translatable="false">TipoAlimento</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="agua2">Water</string>
    <string name="tipo_de_alimento">Types of Consumption</string>
    <string name="fechar">Close</string>
    <string name="proteinas">Proteins</string>
    <string name="salvar">Save</string>
    <string name="apagar">Delete</string>
    <string name="title_activity_editar">"Edit Food "</string>
    <string name="dados_eliminar">"Data to Delete "</string>
    <string name="simples" translatable="false">simples</string>
    <string name="voltar">"Back "</string>
    <string name="introduza_o_valor">"Enter the Value "</string>
    <string name="retroceder" translatable="false">"Go back "</string>
    <string name="introduzir_valor_mudar">Enter value to change</string>
    <string name="valor_alterar">Value to Change</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Delete</string>
    <string name="coisaf" translatable="false">coisaF</string>
    <string name="tipo_de_consumo">"Type of Consumption "</string>
    <string name="doofcomida" translatable="false">doofcomida</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="ver" translatable="false">Ver</string>
    <string name="title_activity_inclusao" translatable="false">Inclusao</string>
    <string name="bot_o_adicionar">"Add Button "</string>
    <string name="bot_o_eliminar">"Delete button "</string>
    <string name="bot_o_editar">"Edit button "</string>
    <string name="dados" translatable="false">"Data "</string>
    <string name="conclu_do">Completed</string>
    <string name="tipo_de_consumo_editar">"Type of Consumption to Edit "</string>
    <string name="tipo_de_consumo_apagar">"Type of Consumption to Erase "</string>
    <string name="todocomebem" translatable="false">TODOcomebem</string>
    <string name="recuar" translatable="false">Recuar</string>
    <string name="buttonEditar" translatable="false">Botão Editar</string>
    <string name="button_deletar" translatable="false">Botão Deletar</string>
    <string name="Button_Adicionar" translatable="false">Botão Adicionar</string>
    <string name="nao" translatable="false" />
    <string name="sim" translatable="false" />
    <string name="g" translatable="false">g</string>
    <string name="sair" translatable="false">Sair</string>
    <string name="table_ver" translatable="false">Table Ver</string>
    <string name="gramas_litros" translatable="false">Gramas Litros</string>
    <string name="defini_es">Settings</string>
    <string name="_2018_2019" translatable="false">2018/2019</string>
    <string name="esta_app_contar_com_uma_base_de_dados_o_qual_ter_a_pr_ncipio_2_tabelas_de_base_de_dados" translatable="false">Esta APP contará com uma base de dados, o qual terá a príncipio 2 tabelas de base de dados.</string>
    <string name="objectivos_da_app">APP Objectives</string>
    <string name="diariamente_deverei_consumir_cerca_de_2_litros_de_gua_por_dia_de_forma_a_me_manter_hidratado_para_me_manter_forte_e_saud_vel_deverei_consumir_por_dia_cerca_de_850_gramas_de_legumes_por_dia_bem_como_150_gramas_de_prote_nas_230_gramas_de_carboidratos" translatable="false">Diariamente deverei consumir cerca de 2 litros de Água por dia de forma a me manter hidratado, para me manter forte e saudável deverei consumir por dia cerca de 850 gramas de Legumes por dia, bem como 150 gramas de Proteínas, 230 gramas de carboidratos.</string>
    <string name="___________" translatable="false">______________________________________________________________________________________________________________________________________________________</string>
    <string name="title_activity_sobre">About</string>
    <string name="title_activity_definicoes">Settings</string>
    <string name="title_activity_navegacao" translatable="false">navegacao</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="communicate" translatable="false">Communicate</string>
    <string name="planos_cumprir">"Plans to be fulfilled "</string>
    <string name="sobre">About</string>
    <string name="acerca" translatable="false">Acerca</string>
    <string name="fechar2">Close</string>
    <string name="aureo_paquete" translatable="false">Aureo Paquete</string>
    <string name="_______" translatable="false">___________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________</string>
    <string name="valor_Input" translatable="false">Valor</string>
    <string name="bebidas">"DRINKS "</string>
    <string name="introduza_o_valor_2">"Enter the value "</string>
    <string name="valorbebida">Value:</string>
    <string name="guardaBebidas">Save</string>
    <string name="introduza_o_valor_Alimentos">"Enter the value "</string>
    <string name="valor_Alimentos">Value:</string>
    <string name="guardarbebidas">Save</string>
    <string name="tipo_de_alimentoNovo">"Type of Food "</string>
    <string name="alimentosSpinner">Foods</string>
    <string name="Erro_Na_Introdução" translatable="false">Erro Na Introdução</string>
    <string name="Erros_ao_Guardar" translatable="false">Erros ao Guardar</string>
    <string name="title_activity_editar_bebidas">Edit Drinks</string>
    <string name="Conexão_com_BD_criada_com_sucesso" translatable="false">Conexão com BD criada com sucesso</string>
    <string name="title_activity_lista_bebidas">"List of Drinks "</string>
    <string name="cancelarBebidas">Cancel</string>
    <string name="Guardado_com_Sucesso">Saved Successfully</string>
    <string name="contato_934559370">Contact Us | 934559370</string>
    <string name="title_activity_preencher">Types of Food</string>
    <string name="title_activity_eliminar">Delete</string>
    <string name="title_activity_dados">"List of Food "</string>
    <string name="title_activity_consumo_liquido">Types of Drinks</string>
    <string name="programa_o_avan_ada">Advanced Programming</string>
    <string name="introduzir_o_valor_do_consumo">Enter the value of consumption</string>
    <string name="este_app_est_sendo_desenvolvido_por">This APP is being developed by:</string>
    <string name="eliminar2">Delete</string>
    <string name="alimentos">Foods</string>
    <string name="bebidasConsumo">Drinks</string>
    <string name="editar2">Edit</string>
    <string name="title_activity_lista">"List of Food "</string>
    <string name="valor_do_consumo">Consumption Value</string>
    <string name="introduzir_valor_editar">Enter value to edit</string>
    <string name="introduza_o_valor_apagar">Enter the value to be deleted</string>
    <string name="introduza_valor_editar">Enter value to edit</string>
    <string name="lista_de_dados">"List of Food "</string>
    <string name="title_activity_eliminar_alimentos">Delete Food</string>
    <string name="lista_de_alimentos_Nav">"List of Food "</string>
    <string name="lista_de_bebidas_NAV">List of Drinks</string>
    <string name="apagar_Nav">Delete</string>
    <string name="editar_Nav">Edit</string>
    <string name="consumo_NavAl">"Consumption "</string>
    <string name="descri_o_NavAl">"Description "</string>
    <string name="valor_do_consumo_NavAl">"Consumption Value "</string>
    <string name="consumo_NavB">"Consumption "</string>
    <string name="descri_o_NavB">Description</string>
    <string name="valor_do_consumo_NavB">"Consumption Value "</string>
    <string name="texto_verrrr">A homemade diet application in a simple and practical, this application will be for personal use, developed under the Advanced Programming course, will fulfill the objectives imposed by the teacher, this application will have 3 database tables. This application has as main objective to help me for a balanced and simple feed, I can add types of consumption, their quantity, as well as change, and delete data added.</string>
    <string name="sobre_o_aplicativo">About the Application</string>
    <string name="descri_o_da_bebida_Be">Description of the Drinks</string>
    <string name="descri_o_do_alimento_Ed">"The Foods Description "</string>
    <string name="_Editar_Bebida">Description of the Drinks</string>
    <string name="descri_o_do_alimento_Al">"The Foods Description "</string>

</resources>
